// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Market Distributor Age1 Should fetch Age1 data 1`] = `
{
  "0x35a18000230da775cac24873d00ff85bccded550": {
    "morphoEmittedBorrowSide": "1959.573215289065064645",
    "morphoEmittedSupplySide": "762.056250390191969584",
    "morphoRatePerSecondBorrowSide": "0.000648008301368675",
    "morphoRatePerSecondSupplySide": "0.00025200322831004",
    "totalMarketSizeBorrowSide": "391.141735670134320593",
    "totalMarketSizeSupplySide": "10783.70738225493536906",
  },
  "0x39aa39c021dfbae8fac545936693ac917d5e7563": {
    "morphoEmittedBorrowSide": "59192.250692304050427819",
    "morphoEmittedSupplySide": "29591.686149309944514161",
    "morphoRatePerSecondBorrowSide": "0.019574195812658375",
    "morphoRatePerSecondSupplySide": "0.009785629915042802",
    "totalMarketSizeBorrowSide": "226068.161196",
    "totalMarketSizeSupplySide": "3221283.468791",
  },
  "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5": {
    "morphoEmittedBorrowSide": "74274.559316054225865116",
    "morphoEmittedSupplySide": "6458.65733183080224914",
    "morphoRatePerSecondBorrowSide": "0.02456174162913492",
    "morphoRatePerSecondSupplySide": "0.002135803619924775",
    "totalMarketSizeBorrowSide": "102.327051025242103302",
    "totalMarketSizeSupplySide": "231.43643991952869814",
  },
  "0x5d3a536e4d6dbd6114cc1ead35777bab948e3643": {
    "morphoEmittedBorrowSide": "38189.682730415225031208",
    "morphoEmittedSupplySide": "19091.977282206981405282",
    "morphoRatePerSecondBorrowSide": "0.012628888394095763",
    "morphoRatePerSecondSupplySide": "0.006313497077774288",
    "totalMarketSizeBorrowSide": "3502529.509604331354335828",
    "totalMarketSizeSupplySide": "6719167.758929551684796565",
  },
  "0x70e36f6bf80a52b3b46b3af8e106cc0ed743e8e4": {
    "morphoEmittedBorrowSide": "1386.871314178311678776",
    "morphoEmittedSupplySide": "1332.484203818377887451",
    "morphoRatePerSecondBorrowSide": "0.000458622376293839",
    "morphoRatePerSecondSupplySide": "0.000440637185066629",
    "totalMarketSizeBorrowSide": "186.995784726445964174",
    "totalMarketSizeSupplySide": "47.281649920248572473",
  },
  "0x7713dd9ca933848f6819f38b8352d9a15ea73f67": {
    "morphoEmittedBorrowSide": "101.429981942443646283",
    "morphoEmittedSupplySide": "50.707384102919554981",
    "morphoRatePerSecondBorrowSide": "0.000033541727246298",
    "morphoRatePerSecondSupplySide": "0.000016768348119381",
    "totalMarketSizeBorrowSide": "90.307347359317629247",
    "totalMarketSizeSupplySide": "8569.325610590706980982",
  },
  "0xccf4429db6322d5c611ee964527d42e5d685dd6a": {
    "morphoEmittedBorrowSide": "43439.275339885696588192",
    "morphoEmittedSupplySide": "21716.379887181494934519",
    "morphoRatePerSecondBorrowSide": "0.014364868230520859",
    "morphoRatePerSecondSupplySide": "0.007181356804008703",
    "totalMarketSizeBorrowSide": "0.00394458",
    "totalMarketSizeSupplySide": "0.54362059",
  },
  "0xf650c3d88d12db855b8bf7d11be6c55a4e07dcc9": {
    "morphoEmittedBorrowSide": "31471.445352654161509704",
    "morphoEmittedSupplySide": "20980.963568436107673135",
    "morphoRatePerSecondBorrowSide": "0.010407244641574739",
    "morphoRatePerSecondSupplySide": "0.006938163094383159",
    "totalMarketSizeBorrowSide": "397655.427053",
    "totalMarketSizeSupplySide": "502910.069332",
  },
}
`;

exports[`Market Distributor e2e Age Epoch distribution  Should fetch data corectly for age1-epoch1 1`] = `
{
  "age1-epoch1": {
    "0x35a18000230da775cac24873d00ff85bccded550": {
      "morphoEmittedBorrowSide": "1959.573215289065064645",
      "morphoEmittedSupplySide": "762.056250390191969584",
      "morphoRatePerSecondBorrowSide": "0.000648008301368675",
      "morphoRatePerSecondSupplySide": "0.00025200322831004",
      "totalMarketSizeBorrowSide": "391.141735670134320593",
      "totalMarketSizeSupplySide": "10783.70738225493536906",
    },
    "0x39aa39c021dfbae8fac545936693ac917d5e7563": {
      "morphoEmittedBorrowSide": "59192.250692304050427819",
      "morphoEmittedSupplySide": "29591.686149309944514161",
      "morphoRatePerSecondBorrowSide": "0.019574195812658375",
      "morphoRatePerSecondSupplySide": "0.009785629915042802",
      "totalMarketSizeBorrowSide": "226068.161196",
      "totalMarketSizeSupplySide": "3221283.468791",
    },
    "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5": {
      "morphoEmittedBorrowSide": "74274.559316054225865116",
      "morphoEmittedSupplySide": "6458.65733183080224914",
      "morphoRatePerSecondBorrowSide": "0.02456174162913492",
      "morphoRatePerSecondSupplySide": "0.002135803619924775",
      "totalMarketSizeBorrowSide": "102.327051025242103302",
      "totalMarketSizeSupplySide": "231.43643991952869814",
    },
    "0x5d3a536e4d6dbd6114cc1ead35777bab948e3643": {
      "morphoEmittedBorrowSide": "38189.682730415225031208",
      "morphoEmittedSupplySide": "19091.977282206981405282",
      "morphoRatePerSecondBorrowSide": "0.012628888394095763",
      "morphoRatePerSecondSupplySide": "0.006313497077774288",
      "totalMarketSizeBorrowSide": "3502529.509604331354335828",
      "totalMarketSizeSupplySide": "6719167.758929551684796565",
    },
    "0x70e36f6bf80a52b3b46b3af8e106cc0ed743e8e4": {
      "morphoEmittedBorrowSide": "1386.871314178311678776",
      "morphoEmittedSupplySide": "1332.484203818377887451",
      "morphoRatePerSecondBorrowSide": "0.000458622376293839",
      "morphoRatePerSecondSupplySide": "0.000440637185066629",
      "totalMarketSizeBorrowSide": "186.995784726445964174",
      "totalMarketSizeSupplySide": "47.281649920248572473",
    },
    "0x7713dd9ca933848f6819f38b8352d9a15ea73f67": {
      "morphoEmittedBorrowSide": "101.429981942443646283",
      "morphoEmittedSupplySide": "50.707384102919554981",
      "morphoRatePerSecondBorrowSide": "0.000033541727246298",
      "morphoRatePerSecondSupplySide": "0.000016768348119381",
      "totalMarketSizeBorrowSide": "90.307347359317629247",
      "totalMarketSizeSupplySide": "8569.325610590706980982",
    },
    "0xccf4429db6322d5c611ee964527d42e5d685dd6a": {
      "morphoEmittedBorrowSide": "43439.275339885696588192",
      "morphoEmittedSupplySide": "21716.379887181494934519",
      "morphoRatePerSecondBorrowSide": "0.014364868230520859",
      "morphoRatePerSecondSupplySide": "0.007181356804008703",
      "totalMarketSizeBorrowSide": "0.00394458",
      "totalMarketSizeSupplySide": "0.54362059",
    },
    "0xf650c3d88d12db855b8bf7d11be6c55a4e07dcc9": {
      "morphoEmittedBorrowSide": "31471.445352654161509704",
      "morphoEmittedSupplySide": "20980.963568436107673135",
      "morphoRatePerSecondBorrowSide": "0.010407244641574739",
      "morphoRatePerSecondSupplySide": "0.006938163094383159",
      "totalMarketSizeBorrowSide": "397655.427053",
      "totalMarketSizeSupplySide": "502910.069332",
    },
  },
}
`;

exports[`Market Distributor e2e Age Epoch distribution  Should fetch data corectly for age1-epoch2 1`] = `
{
  "age1-epoch2": {
    "0x35a18000230da775cac24873d00ff85bccded550": {
      "morphoEmittedBorrowSide": "12363.639591477186789396",
      "morphoEmittedSupplySide": "3438.55825039038323795",
      "morphoRatePerSecondBorrowSide": "0.004208763903887734",
      "morphoRatePerSecondSupplySide": "0.001170535564271435",
      "totalMarketSizeBorrowSide": "10406.274441216051808936",
      "totalMarketSizeSupplySide": "17697.09033772435503468",
    },
    "0x39aa39c021dfbae8fac545936693ac917d5e7563": {
      "morphoEmittedBorrowSide": "362044.74094350845405122",
      "morphoEmittedSupplySide": "156495.420820324908955397",
      "morphoRatePerSecondBorrowSide": "0.12324532966213454",
      "morphoRatePerSecondSupplySide": "0.053273332128376116",
      "totalMarketSizeBorrowSide": "7479366.874451",
      "totalMarketSizeSupplySide": "13070996.970924",
    },
    "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5": {
      "morphoEmittedBorrowSide": "245343.770232824808840034",
      "morphoEmittedSupplySide": "21334.240889810852942611",
      "morphoRatePerSecondBorrowSide": "0.083518610887966413",
      "morphoRatePerSecondSupplySide": "0.007262487903301427",
      "totalMarketSizeBorrowSide": "3737.297950775431169018",
      "totalMarketSizeSupplySide": "5369.891183942835511471",
    },
    "0x5d3a536e4d6dbd6114cc1ead35777bab948e3643": {
      "morphoEmittedBorrowSide": "256045.363343570103189632",
      "morphoEmittedSupplySide": "128003.479229656390270143",
      "morphoRatePerSecondBorrowSide": "0.087161589839702185",
      "morphoRatePerSecondSupplySide": "0.043574258127452735",
      "totalMarketSizeBorrowSide": "1934167.430699271551959041",
      "totalMarketSizeSupplySide": "7192384.92715967229295889",
    },
    "0x70e36f6bf80a52b3b46b3af8e106cc0ed743e8e4": {
      "morphoEmittedBorrowSide": "7467.967610358752641326",
      "morphoEmittedSupplySide": "12975.414843401862308922",
      "morphoRatePerSecondBorrowSide": "0.002542205495503719",
      "morphoRatePerSecondSupplySide": "0.004417021155204518",
      "totalMarketSizeBorrowSide": "2191.082373715404935324",
      "totalMarketSizeSupplySide": "76015.755603043665838955",
    },
    "0x7713dd9ca933848f6819f38b8352d9a15ea73f67": {
      "morphoEmittedBorrowSide": "545.123647974469430723",
      "morphoEmittedSupplySide": "545.123647974469430722",
      "morphoRatePerSecondBorrowSide": "0.000185568069642867",
      "morphoRatePerSecondSupplySide": "0.000185568069642867",
      "totalMarketSizeBorrowSide": "20104.835764835382072582",
      "totalMarketSizeSupplySide": "8592.654638277787724207",
    },
    "0xccf4429db6322d5c611ee964527d42e5d685dd6a": {
      "morphoEmittedBorrowSide": "122556.405302053573516133",
      "morphoEmittedSupplySide": "61269.011380192674445667",
      "morphoRatePerSecondBorrowSide": "0.041719994424707285",
      "morphoRatePerSecondSupplySide": "0.020856868369213946",
      "totalMarketSizeBorrowSide": "131.44965457",
      "totalMarketSizeSupplySide": "247.65136701",
    },
    "0xf650c3d88d12db855b8bf7d11be6c55a4e07dcc9": {
      "morphoEmittedBorrowSide": "160481.990154143807398142",
      "morphoEmittedSupplySide": "149089.750112337302551977",
      "morphoRatePerSecondBorrowSide": "0.054630418687587123",
      "morphoRatePerSecondSupplySide": "0.050752333410381864",
      "totalMarketSizeBorrowSide": "1325926.026349",
      "totalMarketSizeSupplySide": "4847973.961056",
    },
  },
}
`;

exports[`Market Distributor e2e Age Epoch distribution  Should fetch data corectly for age1-epoch3 1`] = `
{
  "age1-epoch3": {
    "0x35a18000230da775cac24873d00ff85bccded550": {
      "morphoEmittedBorrowSide": "23719.265526489978994534",
      "morphoEmittedSupplySide": "10247.891177634292800588",
      "morphoRatePerSecondBorrowSide": "0.007862408081721847",
      "morphoRatePerSecondSupplySide": "0.003396947613139741",
      "totalMarketSizeBorrowSide": "71148.726695454924541222",
      "totalMarketSizeSupplySide": "134494.401164653353770917",
    },
    "0x39aa39c021dfbae8fac545936693ac917d5e7563": {
      "morphoEmittedBorrowSide": "598932.359815084249869832",
      "morphoEmittedSupplySide": "258891.1288917107227309",
      "morphoRatePerSecondBorrowSide": "0.198532733695136045",
      "morphoRatePerSecondSupplySide": "0.085816641405316611",
      "totalMarketSizeBorrowSide": "32169963.118448",
      "totalMarketSizeSupplySide": "51092549.654075",
    },
    "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5": {
      "morphoEmittedBorrowSide": "534476.567535216082814616",
      "morphoEmittedSupplySide": "46476.223263931833288227",
      "morphoRatePerSecondBorrowSide": "0.177167074561675766",
      "morphoRatePerSecondSupplySide": "0.015405832570580501",
      "totalMarketSizeBorrowSide": "7370.284442972526456976",
      "totalMarketSizeSupplySide": "9117.537145447871995366",
    },
    "0x5d3a536e4d6dbd6114cc1ead35777bab948e3643": {
      "morphoEmittedBorrowSide": "472784.113239770852875383",
      "morphoEmittedSupplySide": "236356.599584244225683763",
      "morphoRatePerSecondBorrowSide": "0.156717400405785364",
      "morphoRatePerSecondSupplySide": "0.078346946985523116",
      "totalMarketSizeBorrowSide": "29348232.354218738509263966",
      "totalMarketSizeSupplySide": "45965258.004381052848552969",
    },
    "0x70e36f6bf80a52b3b46b3af8e106cc0ed743e8e4": {
      "morphoEmittedBorrowSide": "15272.640179528229239756",
      "morphoEmittedSupplySide": "22059.650652855611483187",
      "morphoRatePerSecondBorrowSide": "0.005062539961140279",
      "morphoRatePerSecondSupplySide": "0.007312282725587365",
      "totalMarketSizeBorrowSide": "47733.900382429909305676",
      "totalMarketSizeSupplySide": "74290.835033059213304628",
    },
    "0x7713dd9ca933848f6819f38b8352d9a15ea73f67": {
      "morphoEmittedBorrowSide": "758.189753101977929882",
      "morphoEmittedSupplySide": "758.189753101977929881",
      "morphoRatePerSecondBorrowSide": "0.00025132301148238",
      "morphoRatePerSecondSupplySide": "0.00025132301148238",
      "totalMarketSizeBorrowSide": "147004.432024296542814348",
      "totalMarketSizeSupplySide": "22661.042454055221860276",
    },
    "0xccf4429db6322d5c611ee964527d42e5d685dd6a": {
      "morphoEmittedBorrowSide": "196976.273237176301920894",
      "morphoEmittedSupplySide": "98473.364136719456172541",
      "morphoRatePerSecondBorrowSide": "0.065293246153756703",
      "morphoRatePerSecondSupplySide": "0.032641726328254251",
      "totalMarketSizeBorrowSide": "222.19502289",
      "totalMarketSizeSupplySide": "375.25971125",
    },
    "0xf650c3d88d12db855b8bf7d11be6c55a4e07dcc9": {
      "morphoEmittedBorrowSide": "224891.014422580292528302",
      "morphoEmittedSupplySide": "208926.528830853913737711",
      "morphoRatePerSecondBorrowSide": "0.07454636094561985",
      "morphoRatePerSecondSupplySide": "0.069254489643924614",
      "totalMarketSizeBorrowSide": "5671608.367621",
      "totalMarketSizeSupplySide": "7485237.053121",
    },
  },
}
`;

exports[`Market Distributor e2e Age Epoch distribution  Should fetch data correctly for age1-epoch1 1`] = `
{
  "age1-epoch1": {
    "0x35a18000230da775cac24873d00ff85bccded550": {
      "morphoEmittedBorrowSide": "1959.573215289065064645",
      "morphoEmittedSupplySide": "762.056250390191969584",
      "morphoRatePerSecondBorrowSide": "0.000648008301368675",
      "morphoRatePerSecondSupplySide": "0.00025200322831004",
      "totalMarketSizeBorrowSide": "391.141735670134320593",
      "totalMarketSizeSupplySide": "10783.70738225493536906",
    },
    "0x39aa39c021dfbae8fac545936693ac917d5e7563": {
      "morphoEmittedBorrowSide": "59192.250692304050427819",
      "morphoEmittedSupplySide": "29591.686149309944514161",
      "morphoRatePerSecondBorrowSide": "0.019574195812658375",
      "morphoRatePerSecondSupplySide": "0.009785629915042802",
      "totalMarketSizeBorrowSide": "226068.161196",
      "totalMarketSizeSupplySide": "3221283.468791",
    },
    "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5": {
      "morphoEmittedBorrowSide": "74274.559316054225865116",
      "morphoEmittedSupplySide": "6458.65733183080224914",
      "morphoRatePerSecondBorrowSide": "0.02456174162913492",
      "morphoRatePerSecondSupplySide": "0.002135803619924775",
      "totalMarketSizeBorrowSide": "102.327051025242103302",
      "totalMarketSizeSupplySide": "231.43643991952869814",
    },
    "0x5d3a536e4d6dbd6114cc1ead35777bab948e3643": {
      "morphoEmittedBorrowSide": "38189.682730415225031208",
      "morphoEmittedSupplySide": "19091.977282206981405282",
      "morphoRatePerSecondBorrowSide": "0.012628888394095763",
      "morphoRatePerSecondSupplySide": "0.006313497077774288",
      "totalMarketSizeBorrowSide": "3502529.509604331354335828",
      "totalMarketSizeSupplySide": "6719167.758929551684796565",
    },
    "0x70e36f6bf80a52b3b46b3af8e106cc0ed743e8e4": {
      "morphoEmittedBorrowSide": "1386.871314178311678776",
      "morphoEmittedSupplySide": "1332.484203818377887451",
      "morphoRatePerSecondBorrowSide": "0.000458622376293839",
      "morphoRatePerSecondSupplySide": "0.000440637185066629",
      "totalMarketSizeBorrowSide": "186.995784726445964174",
      "totalMarketSizeSupplySide": "47.281649920248572473",
    },
    "0x7713dd9ca933848f6819f38b8352d9a15ea73f67": {
      "morphoEmittedBorrowSide": "101.429981942443646283",
      "morphoEmittedSupplySide": "50.707384102919554981",
      "morphoRatePerSecondBorrowSide": "0.000033541727246298",
      "morphoRatePerSecondSupplySide": "0.000016768348119381",
      "totalMarketSizeBorrowSide": "90.307347359317629247",
      "totalMarketSizeSupplySide": "8569.325610590706980982",
    },
    "0xccf4429db6322d5c611ee964527d42e5d685dd6a": {
      "morphoEmittedBorrowSide": "43439.275339885696588192",
      "morphoEmittedSupplySide": "21716.379887181494934519",
      "morphoRatePerSecondBorrowSide": "0.014364868230520859",
      "morphoRatePerSecondSupplySide": "0.007181356804008703",
      "totalMarketSizeBorrowSide": "0.00394458",
      "totalMarketSizeSupplySide": "0.54362059",
    },
    "0xf650c3d88d12db855b8bf7d11be6c55a4e07dcc9": {
      "morphoEmittedBorrowSide": "31471.445352654161509704",
      "morphoEmittedSupplySide": "20980.963568436107673135",
      "morphoRatePerSecondBorrowSide": "0.010407244641574739",
      "morphoRatePerSecondSupplySide": "0.006938163094383159",
      "totalMarketSizeBorrowSide": "397655.427053",
      "totalMarketSizeSupplySide": "502910.069332",
    },
  },
}
`;

exports[`Market Distributor e2e Age Epoch distribution  Should fetch data correctly for age1-epoch2 1`] = `
{
  "age1-epoch2": {
    "0x35a18000230da775cac24873d00ff85bccded550": {
      "morphoEmittedBorrowSide": "12363.639591477186789396",
      "morphoEmittedSupplySide": "3438.55825039038323795",
      "morphoRatePerSecondBorrowSide": "0.004208763903887734",
      "morphoRatePerSecondSupplySide": "0.001170535564271435",
      "totalMarketSizeBorrowSide": "10406.274441216051808936",
      "totalMarketSizeSupplySide": "17697.09033772435503468",
    },
    "0x39aa39c021dfbae8fac545936693ac917d5e7563": {
      "morphoEmittedBorrowSide": "362044.74094350845405122",
      "morphoEmittedSupplySide": "156495.420820324908955397",
      "morphoRatePerSecondBorrowSide": "0.12324532966213454",
      "morphoRatePerSecondSupplySide": "0.053273332128376116",
      "totalMarketSizeBorrowSide": "7479366.874451",
      "totalMarketSizeSupplySide": "13070996.970924",
    },
    "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5": {
      "morphoEmittedBorrowSide": "245343.770232824808840034",
      "morphoEmittedSupplySide": "21334.240889810852942611",
      "morphoRatePerSecondBorrowSide": "0.083518610887966413",
      "morphoRatePerSecondSupplySide": "0.007262487903301427",
      "totalMarketSizeBorrowSide": "3737.297950775431169018",
      "totalMarketSizeSupplySide": "5369.891183942835511471",
    },
    "0x5d3a536e4d6dbd6114cc1ead35777bab948e3643": {
      "morphoEmittedBorrowSide": "256045.363343570103189632",
      "morphoEmittedSupplySide": "128003.479229656390270143",
      "morphoRatePerSecondBorrowSide": "0.087161589839702185",
      "morphoRatePerSecondSupplySide": "0.043574258127452735",
      "totalMarketSizeBorrowSide": "1934167.430699271551959041",
      "totalMarketSizeSupplySide": "7192384.92715967229295889",
    },
    "0x70e36f6bf80a52b3b46b3af8e106cc0ed743e8e4": {
      "morphoEmittedBorrowSide": "7467.967610358752641326",
      "morphoEmittedSupplySide": "12975.414843401862308922",
      "morphoRatePerSecondBorrowSide": "0.002542205495503719",
      "morphoRatePerSecondSupplySide": "0.004417021155204518",
      "totalMarketSizeBorrowSide": "2191.082373715404935324",
      "totalMarketSizeSupplySide": "76015.755603043665838955",
    },
    "0x7713dd9ca933848f6819f38b8352d9a15ea73f67": {
      "morphoEmittedBorrowSide": "545.123647974469430723",
      "morphoEmittedSupplySide": "545.123647974469430722",
      "morphoRatePerSecondBorrowSide": "0.000185568069642867",
      "morphoRatePerSecondSupplySide": "0.000185568069642867",
      "totalMarketSizeBorrowSide": "20104.835764835382072582",
      "totalMarketSizeSupplySide": "8592.654638277787724207",
    },
    "0xccf4429db6322d5c611ee964527d42e5d685dd6a": {
      "morphoEmittedBorrowSide": "122556.405302053573516133",
      "morphoEmittedSupplySide": "61269.011380192674445667",
      "morphoRatePerSecondBorrowSide": "0.041719994424707285",
      "morphoRatePerSecondSupplySide": "0.020856868369213946",
      "totalMarketSizeBorrowSide": "131.44965457",
      "totalMarketSizeSupplySide": "247.65136701",
    },
    "0xf650c3d88d12db855b8bf7d11be6c55a4e07dcc9": {
      "morphoEmittedBorrowSide": "160481.990154143807398142",
      "morphoEmittedSupplySide": "149089.750112337302551977",
      "morphoRatePerSecondBorrowSide": "0.054630418687587123",
      "morphoRatePerSecondSupplySide": "0.050752333410381864",
      "totalMarketSizeBorrowSide": "1325926.026349",
      "totalMarketSizeSupplySide": "4847973.961056",
    },
  },
}
`;

exports[`Market Distributor e2e Age Epoch distribution  Should fetch data correctly for age1-epoch3 1`] = `
{
  "age1-epoch3": {
    "0x35a18000230da775cac24873d00ff85bccded550": {
      "morphoEmittedBorrowSide": "23719.265526489978994534",
      "morphoEmittedSupplySide": "10247.891177634292800588",
      "morphoRatePerSecondBorrowSide": "0.007862408081721847",
      "morphoRatePerSecondSupplySide": "0.003396947613139741",
      "totalMarketSizeBorrowSide": "71148.726695454924541222",
      "totalMarketSizeSupplySide": "134494.401164653353770917",
    },
    "0x39aa39c021dfbae8fac545936693ac917d5e7563": {
      "morphoEmittedBorrowSide": "598932.359815084249869832",
      "morphoEmittedSupplySide": "258891.1288917107227309",
      "morphoRatePerSecondBorrowSide": "0.198532733695136045",
      "morphoRatePerSecondSupplySide": "0.085816641405316611",
      "totalMarketSizeBorrowSide": "32169963.118448",
      "totalMarketSizeSupplySide": "51092549.654075",
    },
    "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5": {
      "morphoEmittedBorrowSide": "534476.567535216082814616",
      "morphoEmittedSupplySide": "46476.223263931833288227",
      "morphoRatePerSecondBorrowSide": "0.177167074561675766",
      "morphoRatePerSecondSupplySide": "0.015405832570580501",
      "totalMarketSizeBorrowSide": "7370.284442972526456976",
      "totalMarketSizeSupplySide": "9117.537145447871995366",
    },
    "0x5d3a536e4d6dbd6114cc1ead35777bab948e3643": {
      "morphoEmittedBorrowSide": "472784.113239770852875383",
      "morphoEmittedSupplySide": "236356.599584244225683763",
      "morphoRatePerSecondBorrowSide": "0.156717400405785364",
      "morphoRatePerSecondSupplySide": "0.078346946985523116",
      "totalMarketSizeBorrowSide": "29348232.354218738509263966",
      "totalMarketSizeSupplySide": "45965258.004381052848552969",
    },
    "0x70e36f6bf80a52b3b46b3af8e106cc0ed743e8e4": {
      "morphoEmittedBorrowSide": "15272.640179528229239756",
      "morphoEmittedSupplySide": "22059.650652855611483187",
      "morphoRatePerSecondBorrowSide": "0.005062539961140279",
      "morphoRatePerSecondSupplySide": "0.007312282725587365",
      "totalMarketSizeBorrowSide": "47733.900382429909305676",
      "totalMarketSizeSupplySide": "74290.835033059213304628",
    },
    "0x7713dd9ca933848f6819f38b8352d9a15ea73f67": {
      "morphoEmittedBorrowSide": "758.189753101977929882",
      "morphoEmittedSupplySide": "758.189753101977929881",
      "morphoRatePerSecondBorrowSide": "0.00025132301148238",
      "morphoRatePerSecondSupplySide": "0.00025132301148238",
      "totalMarketSizeBorrowSide": "147004.432024296542814348",
      "totalMarketSizeSupplySide": "22661.042454055221860276",
    },
    "0xccf4429db6322d5c611ee964527d42e5d685dd6a": {
      "morphoEmittedBorrowSide": "196976.273237176301920894",
      "morphoEmittedSupplySide": "98473.364136719456172541",
      "morphoRatePerSecondBorrowSide": "0.065293246153756703",
      "morphoRatePerSecondSupplySide": "0.032641726328254251",
      "totalMarketSizeBorrowSide": "222.19502289",
      "totalMarketSizeSupplySide": "375.25971125",
    },
    "0xf650c3d88d12db855b8bf7d11be6c55a4e07dcc9": {
      "morphoEmittedBorrowSide": "224891.014422580292528302",
      "morphoEmittedSupplySide": "208926.528830853913737711",
      "morphoRatePerSecondBorrowSide": "0.07454636094561985",
      "morphoRatePerSecondSupplySide": "0.069254489643924614",
      "totalMarketSizeBorrowSide": "5671608.367621",
      "totalMarketSizeSupplySide": "7485237.053121",
    },
  },
}
`;

exports[`Market Distributor e2e Age Epoch distribution  Should fetch data correctly for age2-epoch1 1`] = `
{
  "age2-epoch1": {
    "0x028171bca77440897b824ca71d1c56cac55b68a3": {
      "morphoEmittedBorrowSide": "6368.804399706621202236",
      "morphoEmittedSupplySide": "12122.908166865525000131",
      "morphoRatePerSecondBorrowSide": "0.002168029820161567",
      "morphoRatePerSecondSupplySide": "0.00412680697401468",
      "totalMarketSizeBorrowSide": "5.766867400151728388",
      "totalMarketSizeSupplySide": "511044.37914946834960238",
    },
    "0x030ba81f1c18d280636f32af80b9aad02cf0854e": {
      "morphoEmittedBorrowSide": "25242.72327680651295861",
      "morphoEmittedSupplySide": "48748.383044678643397613",
      "morphoRatePerSecondBorrowSide": "0.008592974971679777",
      "morphoRatePerSecondSupplySide": "0.016594629304424919",
      "totalMarketSizeBorrowSide": "0.337951949944053695",
      "totalMarketSizeSupplySide": "202.448685465251642955",
    },
    "0x1982b2f5814301d4e9a8b0201555376e62f82428": {
      "morphoEmittedBorrowSide": "0.0",
      "morphoEmittedSupplySide": "50780.372394832644498397",
      "morphoRatePerSecondBorrowSide": "0.0",
      "morphoRatePerSecondSupplySide": "0.01728634681196645",
      "totalMarketSizeBorrowSide": "0.0",
      "totalMarketSizeSupplySide": "324.889072033304657943",
    },
    "0x35a18000230da775cac24873d00ff85bccded550": {
      "morphoEmittedBorrowSide": "1800.077812764040938307",
      "morphoEmittedSupplySide": "19131.55277738854972062",
      "morphoRatePerSecondBorrowSide": "0.000612771586589066",
      "morphoRatePerSecondSupplySide": "0.006512647323457431",
      "totalMarketSizeBorrowSide": "127697.843827244770777049",
      "totalMarketSizeSupplySide": "204065.032830654846935276",
    },
    "0x39aa39c021dfbae8fac545936693ac917d5e7563": {
      "morphoEmittedBorrowSide": "245201.900272162023565052",
      "morphoEmittedSupplySide": "709557.642784117862261429",
      "morphoRatePerSecondBorrowSide": "0.083470145789815503",
      "morphoRatePerSecondSupplySide": "0.241543315217905045",
      "totalMarketSizeBorrowSide": "30738903.166628",
      "totalMarketSizeSupplySide": "51607717.709211",
    },
    "0x3ed3b47dd13ec9a98b44e6204a523e766b225811": {
      "morphoEmittedBorrowSide": "11124.492317012398406147",
      "morphoEmittedSupplySide": "20661.209175924087761175",
      "morphoRatePerSecondBorrowSide": "0.003786932297457924",
      "morphoRatePerSecondSupplySide": "0.007033363690061304",
      "totalMarketSizeBorrowSide": "14.912398",
      "totalMarketSizeSupplySide": "2229.564683",
    },
    "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5": {
      "morphoEmittedBorrowSide": "31506.863370430945794199",
      "morphoEmittedSupplySide": "384006.240909605065117933",
      "morphoRatePerSecondBorrowSide": "0.010725375602679379",
      "morphoRatePerSecondSupplySide": "0.130721078741014796",
      "totalMarketSizeBorrowSide": "8532.269926848898273335",
      "totalMarketSizeSupplySide": "9429.344850809694636933",
    },
    "0x5d3a536e4d6dbd6114cc1ead35777bab948e3643": {
      "morphoEmittedBorrowSide": "187064.252362571735238109",
      "morphoEmittedSupplySide": "437055.394098835594211215",
      "morphoRatePerSecondBorrowSide": "0.063679279807520334",
      "morphoRatePerSecondSupplySide": "0.148779750169810591",
      "totalMarketSizeBorrowSide": "34619007.76551222979485917",
      "totalMarketSizeSupplySide": "50262128.499079015682474389",
    },
    "0x70e36f6bf80a52b3b46b3af8e106cc0ed743e8e4": {
      "morphoEmittedBorrowSide": "3862.015379286494113259",
      "morphoEmittedSupplySide": "44628.535777922856652672",
      "morphoRatePerSecondBorrowSide": "0.001314683884561034",
      "morphoRatePerSecondSupplySide": "0.015192175850327769",
      "totalMarketSizeBorrowSide": "5698.99310968610469097",
      "totalMarketSizeSupplySide": "5794.173636622037620829",
    },
    "0x8dae6cb04688c62d939ed9b68d32bc62e49970b1": {
      "morphoEmittedBorrowSide": "3094.443176879330922294",
      "morphoEmittedSupplySide": "6996.603480692272847292",
      "morphoRatePerSecondBorrowSide": "0.001053391604329837",
      "morphoRatePerSecondSupplySide": "0.002381741380954613",
      "totalMarketSizeBorrowSide": "1.003744239391979064",
      "totalMarketSizeSupplySide": "282.965945527757378348",
    },
    "0x9ff58f4ffb29fa2266ab25e75e2a8b3503311656": {
      "morphoEmittedBorrowSide": "2733.614986156130271168",
      "morphoEmittedSupplySide": "27612.474616573242278743",
      "morphoRatePerSecondBorrowSide": "0.000930560657052059",
      "morphoRatePerSecondSupplySide": "0.009399671370020847",
      "totalMarketSizeBorrowSide": "0.08447319",
      "totalMarketSizeSupplySide": "6.33626979",
    },
    "0xbcca60bb61934080951369a648fb03df4f96263c": {
      "morphoEmittedBorrowSide": "19970.294430522352473621",
      "morphoEmittedSupplySide": "64543.676533350237982567",
      "morphoRatePerSecondBorrowSide": "0.006798166677056901",
      "morphoRatePerSecondSupplySide": "0.021971567447355064",
      "totalMarketSizeBorrowSide": "581207.353607",
      "totalMarketSizeSupplySide": "1566437.690881",
    },
    "0xccf4429db6322d5c611ee964527d42e5d685dd6a": {
      "morphoEmittedBorrowSide": "1181.417150855118145147",
      "morphoEmittedSupplySide": "261333.384171744888945886",
      "morphoRatePerSecondBorrowSide": "0.000402170871069961",
      "morphoRatePerSecondSupplySide": "0.088961527836242132",
      "totalMarketSizeBorrowSide": "345.07892074",
      "totalMarketSizeSupplySide": "468.20969718",
    },
    "0xf650c3d88d12db855b8bf7d11be6c55a4e07dcc9": {
      "morphoEmittedBorrowSide": "143410.235052829907609739",
      "morphoEmittedSupplySide": "230260.488079484917686426",
      "morphoRatePerSecondBorrowSide": "0.048818843631818459",
      "morphoRatePerSecondSupplySide": "0.078383880746012022",
      "totalMarketSizeBorrowSide": "7030584.488151",
      "totalMarketSizeSupplySide": "4376370.299091",
    },
  },
}
`;

exports[`Market Distributor e2e Age Epoch distribution  Should fetch data correctly for age2-epoch2 1`] = `
{
  "age2-epoch2": {
    "0x028171bca77440897b824ca71d1c56cac55b68a3": {
      "morphoEmittedBorrowSide": "15245.00776246714156922",
      "morphoEmittedSupplySide": "37344.705334746748000319",
      "morphoRatePerSecondBorrowSide": "0.005189613208900851",
      "morphoRatePerSecondSupplySide": "0.01271265840643612",
      "totalMarketSizeBorrowSide": "541198.982687314423632813",
      "totalMarketSizeSupplySide": "1653492.718541399405203473",
    },
    "0x030ba81f1c18d280636f32af80b9aad02cf0854e": {
      "morphoEmittedBorrowSide": "122567.186647793436517098",
      "morphoEmittedSupplySide": "235374.665945505707181007",
      "morphoRatePerSecondBorrowSide": "0.041723579332718353",
      "morphoRatePerSecondSupplySide": "0.080124818200403631",
      "totalMarketSizeBorrowSide": "7817.760674586720364493",
      "totalMarketSizeSupplySide": "3172.069247773842283546",
    },
    "0x1982b2f5814301d4e9a8b0201555376e62f82428": {
      "morphoEmittedBorrowSide": "0.0",
      "morphoEmittedSupplySide": "230844.802899941735780471",
      "morphoRatePerSecondBorrowSide": "0.0",
      "morphoRatePerSecondSupplySide": "0.078582789658204566",
      "totalMarketSizeBorrowSide": "0.0",
      "totalMarketSizeSupplySide": "9835.81820495809021122",
    },
    "0x35a18000230da775cac24873d00ff85bccded550": {
      "morphoEmittedBorrowSide": "1581.265163720237452981",
      "morphoEmittedSupplySide": "18015.857046665080987784",
      "morphoRatePerSecondBorrowSide": "0.000538284709872085",
      "morphoRatePerSecondSupplySide": "0.006132848940177383",
      "totalMarketSizeBorrowSide": "66333.874330067804848971",
      "totalMarketSizeSupplySide": "135360.472700865426871322",
    },
    "0x39aa39c021dfbae8fac545936693ac917d5e7563": {
      "morphoEmittedBorrowSide": "198990.217633932385880933",
      "morphoEmittedSupplySide": "555173.852385148610050254",
      "morphoRatePerSecondBorrowSide": "0.067739044673860425",
      "morphoRatePerSecondSupplySide": "0.188988920338081634",
      "totalMarketSizeBorrowSide": "23188551.396002",
      "totalMarketSizeSupplySide": "51037478.672602",
    },
    "0x3ed3b47dd13ec9a98b44e6204a523e766b225811": {
      "morphoEmittedBorrowSide": "48130.550635240062991525",
      "morphoEmittedSupplySide": "67088.156590618873695236",
      "morphoRatePerSecondBorrowSide": "0.016384310537595337",
      "morphoRatePerSecondSupplySide": "0.022837743937438342",
      "totalMarketSizeBorrowSide": "711854.374524",
      "totalMarketSizeSupplySide": "1862553.095488",
    },
    "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5": {
      "morphoEmittedBorrowSide": "20700.987493130945796989",
      "morphoEmittedSupplySide": "331581.689717146067716852",
      "morphoRatePerSecondBorrowSide": "0.007046904783881721",
      "morphoRatePerSecondSupplySide": "0.112875030540967479",
      "totalMarketSizeBorrowSide": "6218.905405677085908695",
      "totalMarketSizeSupplySide": "8463.703507681208283936",
    },
    "0x5d3a536e4d6dbd6114cc1ead35777bab948e3643": {
      "morphoEmittedBorrowSide": "171697.210818053532307749",
      "morphoEmittedSupplySide": "380709.397274399685394545",
      "morphoRatePerSecondBorrowSide": "0.058448124597648942",
      "morphoRatePerSecondSupplySide": "0.129598787198529304",
      "totalMarketSizeBorrowSide": "19950143.371557752134584865",
      "totalMarketSizeSupplySide": "28351830.44982033306335312",
    },
    "0x70e36f6bf80a52b3b46b3af8e106cc0ed743e8e4": {
      "morphoEmittedBorrowSide": "2351.18569114165942145",
      "morphoEmittedSupplySide": "17069.303929082856074236",
      "morphoRatePerSecondBorrowSide": "0.000800376392681665",
      "morphoRatePerSecondSupplySide": "0.005810629060826135",
      "totalMarketSizeBorrowSide": "5446.249348706007585388",
      "totalMarketSizeSupplySide": "6082.823461225717035829",
    },
    "0x8dae6cb04688c62d939ed9b68d32bc62e49970b1": {
      "morphoEmittedBorrowSide": "11860.591289160270180764",
      "morphoEmittedSupplySide": "28050.763027370951587582",
      "morphoRatePerSecondBorrowSide": "0.004037510651266431",
      "morphoRatePerSecondSupplySide": "0.009548870856267344",
      "totalMarketSizeBorrowSide": "2969993.440889271979661244",
      "totalMarketSizeSupplySide": "464722.658346884079277307",
    },
    "0x9ff58f4ffb29fa2266ab25e75e2a8b3503311656": {
      "morphoEmittedBorrowSide": "10785.757916786150927724",
      "morphoEmittedSupplySide": "127857.488493437812944361",
      "morphoRatePerSecondBorrowSide": "0.003671622384526875",
      "morphoRatePerSecondSupplySide": "0.043524471845533024",
      "totalMarketSizeBorrowSide": "51.4115715",
      "totalMarketSizeSupplySide": "61.66759835",
    },
    "0xbcca60bb61934080951369a648fb03df4f96263c": {
      "morphoEmittedBorrowSide": "82177.442589128172371083",
      "morphoEmittedSupplySide": "172672.880867802936253605",
      "morphoRatePerSecondBorrowSide": "0.027974347286604089",
      "morphoRatePerSecondSupplySide": "0.058780256286697622",
      "totalMarketSizeBorrowSide": "2735788.075798",
      "totalMarketSizeSupplySide": "10184158.810606",
    },
    "0xccf4429db6322d5c611ee964527d42e5d685dd6a": {
      "morphoEmittedBorrowSide": "1016.112168681491153946",
      "morphoEmittedSupplySide": "188942.361125633046290214",
      "morphoRatePerSecondBorrowSide": "0.000345898750231989",
      "morphoRatePerSecondSupplySide": "0.064318614217603842",
      "totalMarketSizeBorrowSide": "211.91214887",
      "totalMarketSizeSupplySide": "357.51452233",
    },
    "0xf650c3d88d12db855b8bf7d11be6c55a4e07dcc9": {
      "morphoEmittedBorrowSide": "111464.030005836649639699",
      "morphoEmittedSupplySide": "210706.529547427751832361",
      "morphoRatePerSecondBorrowSide": "0.037943909996540253",
      "morphoRatePerSecondSupplySide": "0.071727440613911952",
      "totalMarketSizeBorrowSide": "13068847.128983",
      "totalMarketSizeSupplySide": "4163224.036887",
    },
  },
}
`;

exports[`Market Distributor e2e Age Epoch distribution  Should fetch data correctly for age2-epoch3 1`] = `
{
  "age2-epoch3": {
    "0x028171bca77440897b824ca71d1c56cac55b68a3": {
      "morphoEmittedBorrowSide": "26285.333539534689618944",
      "morphoEmittedSupplySide": "50439.924799906135922149",
      "morphoRatePerSecondBorrowSide": "0.009507137420259942",
      "morphoRatePerSecondSupplySide": "0.018243607060151235",
      "totalMarketSizeBorrowSide": "518302.88942402939407477",
      "totalMarketSizeSupplySide": "11710615.39175040647829577",
    },
    "0x030ba81f1c18d280636f32af80b9aad02cf0854e": {
      "morphoEmittedBorrowSide": "186767.193149267938522478",
      "morphoEmittedSupplySide": "296079.8749316179532716",
      "morphoRatePerSecondBorrowSide": "0.06755179150364147",
      "morphoRatePerSecondSupplySide": "0.107089075134410428",
      "totalMarketSizeBorrowSide": "75864.481575791851822382",
      "totalMarketSizeSupplySide": "45963.1656183657653451",
    },
    "0x1982b2f5814301d4e9a8b0201555376e62f82428": {
      "morphoEmittedBorrowSide": "0.0",
      "morphoEmittedSupplySide": "370213.127233344282767362",
      "morphoRatePerSecondBorrowSide": "0.0",
      "morphoRatePerSecondSupplySide": "0.133902317431041768",
      "totalMarketSizeBorrowSide": "0.0",
      "totalMarketSizeSupplySide": "98731.895602464529831293",
    },
    "0x35a18000230da775cac24873d00ff85bccded550": {
      "morphoEmittedBorrowSide": "1656.355703021580715991",
      "morphoEmittedSupplySide": "17071.432417688931695142",
      "morphoRatePerSecondBorrowSide": "0.000599086987493337",
      "morphoRatePerSecondSupplySide": "0.006174563229777536",
      "totalMarketSizeBorrowSide": "26130.565736745935866247",
      "totalMarketSizeSupplySide": "105950.313667450982754491",
    },
    "0x39aa39c021dfbae8fac545936693ac917d5e7563": {
      "morphoEmittedBorrowSide": "172538.516103910060632525",
      "morphoEmittedSupplySide": "399736.273056155554670432",
      "morphoRatePerSecondBorrowSide": "0.062405423938046173",
      "morphoRatePerSecondSupplySide": "0.144580538576445151",
      "totalMarketSizeBorrowSide": "20762645.686573",
      "totalMarketSizeSupplySide": "45988808.89075",
    },
    "0x3ed3b47dd13ec9a98b44e6204a523e766b225811": {
      "morphoEmittedBorrowSide": "75588.824186969246811293",
      "morphoEmittedSupplySide": "108174.490256069055919635",
      "morphoRatePerSecondBorrowSide": "0.027339707822254501",
      "morphoRatePerSecondSupplySide": "0.039125611348404606",
      "totalMarketSizeBorrowSide": "4253211.377415",
      "totalMarketSizeSupplySide": "4355035.90894",
    },
    "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5": {
      "morphoEmittedBorrowSide": "11864.491356183392765099",
      "morphoEmittedSupplySide": "299332.945831930321532865",
      "morphoRatePerSecondBorrowSide": "0.004291265681489942",
      "morphoRatePerSecondSupplySide": "0.108265677745923872",
      "totalMarketSizeBorrowSide": "9838.686877073897486726",
      "totalMarketSizeSupplySide": "7420.643750806610183698",
    },
    "0x5d3a536e4d6dbd6114cc1ead35777bab948e3643": {
      "morphoEmittedBorrowSide": "141417.545479123052752292",
      "morphoEmittedSupplySide": "303944.965810370111284017",
      "morphoRatePerSecondBorrowSide": "0.051149285835909668",
      "morphoRatePerSecondSupplySide": "0.109933798397847985",
      "totalMarketSizeBorrowSide": "22221650.35695911359845526",
      "totalMarketSizeSupplySide": "34190029.500569818218155666",
    },
    "0x70e36f6bf80a52b3b46b3af8e106cc0ed743e8e4": {
      "morphoEmittedBorrowSide": "374.232389767360686814",
      "morphoEmittedSupplySide": "16890.90935797729202691",
      "morphoRatePerSecondBorrowSide": "0.000135356043752662",
      "morphoRatePerSecondSupplySide": "0.006109269877740629",
      "totalMarketSizeBorrowSide": "7352.863922482899547143",
      "totalMarketSizeSupplySide": "8789.98958847082633958",
    },
    "0x8dae6cb04688c62d939ed9b68d32bc62e49970b1": {
      "morphoEmittedBorrowSide": "12869.158708602752948349",
      "morphoEmittedSupplySide": "27233.607223864763336839",
      "morphoRatePerSecondBorrowSide": "0.004654643630136991",
      "morphoRatePerSecondSupplySide": "0.009850118353539049",
      "totalMarketSizeBorrowSide": "4649085.856482310962598745",
      "totalMarketSizeSupplySide": "1357251.327767530451809925",
    },
    "0x9ff58f4ffb29fa2266ab25e75e2a8b3503311656": {
      "morphoEmittedBorrowSide": "29992.007264393569094611",
      "morphoEmittedSupplySide": "170455.250064104014500137",
      "morphoRatePerSecondBorrowSide": "0.01084780355338309",
      "morphoRatePerSecondSupplySide": "0.061651927829898732",
      "totalMarketSizeBorrowSide": "154.44989277",
      "totalMarketSizeSupplySide": "290.73047559",
    },
    "0xbcca60bb61934080951369a648fb03df4f96263c": {
      "morphoEmittedBorrowSide": "147114.502646284184930194",
      "morphoEmittedSupplySide": "298786.705996041412356402",
      "morphoRatePerSecondBorrowSide": "0.05320981721870811",
      "morphoRatePerSecondSupplySide": "0.108068108360836737",
      "totalMarketSizeBorrowSide": "9762880.952933",
      "totalMarketSizeSupplySide": "36044535.192242",
    },
    "0xccf4429db6322d5c611ee964527d42e5d685dd6a": {
      "morphoEmittedBorrowSide": "1896.798043266370691222",
      "morphoEmittedSupplySide": "178600.237975330117286292",
      "morphoRatePerSecondBorrowSide": "0.000686052533010116",
      "morphoRatePerSecondSupplySide": "0.064597886999179006",
      "totalMarketSizeBorrowSide": "51.95873941",
      "totalMarketSizeSupplySide": "470.73679677",
    },
    "0xf650c3d88d12db855b8bf7d11be6c55a4e07dcc9": {
      "morphoEmittedBorrowSide": "88472.72943607270211244",
      "morphoEmittedSupplySide": "166202.567039203151147954",
      "morphoRatePerSecondBorrowSide": "0.031999685125894351",
      "morphoRatePerSecondSupplySide": "0.060113775694156232",
      "totalMarketSizeBorrowSide": "13436555.676622",
      "totalMarketSizeSupplySide": "4766600.273403",
    },
  },
}
`;

exports[`Market Distributor e2e Age Epoch distribution  Should fetch data correctly for age3-epoch1 1`] = `
{
  "age3-epoch1": {
    "0x028171bca77440897b824ca71d1c56cac55b68a3": {
      "morphoEmittedBorrowSide": "15428.555006452637002625",
      "morphoEmittedSupplySide": "80628.012501415564942657",
      "morphoRatePerSecondBorrowSide": "0.005252095250017918",
      "morphoRatePerSecondSupplySide": "0.027446899680492771",
      "totalMarketSizeBorrowSide": "2635854.129012329023416714",
      "totalMarketSizeSupplySide": "13774697.603050368385097035",
    },
    "0x030ba81f1c18d280636f32af80b9aad02cf0854e": {
      "morphoEmittedBorrowSide": "599621.61733035675949242",
      "morphoEmittedSupplySide": "598957.00783715519754146",
      "morphoRatePerSecondBorrowSide": "0.204119559276401402",
      "morphoRatePerSecondSupplySide": "0.20389331693802941",
      "totalMarketSizeBorrowSide": "79252.890919220147288127",
      "totalMarketSizeSupplySide": "79165.048483013311484897",
    },
    "0x1982b2f5814301d4e9a8b0201555376e62f82428": {
      "morphoEmittedBorrowSide": "0.0",
      "morphoEmittedSupplySide": "232921.66034966202995758",
      "morphoRatePerSecondBorrowSide": "0.0",
      "morphoRatePerSecondSupplySide": "0.079289780892450309",
      "totalMarketSizeBorrowSide": "0.0",
      "totalMarketSizeSupplySide": "96412.000735823119695481",
    },
    "0x35a18000230da775cac24873d00ff85bccded550": {
      "morphoEmittedBorrowSide": "643.611146650533250906",
      "morphoEmittedSupplySide": "1536.71672402017318112",
      "morphoRatePerSecondBorrowSide": "0.000219094208418618",
      "morphoRatePerSecondSupplySide": "0.000523119799843468",
      "totalMarketSizeBorrowSide": "27913.791002765281903613",
      "totalMarketSizeSupplySide": "66648.301055675491605578",
    },
    "0x39aa39c021dfbae8fac545936693ac917d5e7563": {
      "morphoEmittedBorrowSide": "44505.80310447190951616",
      "morphoEmittedSupplySide": "107504.135893631105427749",
      "morphoRatePerSecondBorrowSide": "0.015150395936979816",
      "morphoRatePerSecondSupplySide": "0.036595906826535643",
      "totalMarketSizeBorrowSide": "16458223.029222",
      "totalMarketSizeSupplySide": "39754973.996265",
    },
    "0x3ed3b47dd13ec9a98b44e6204a523e766b225811": {
      "morphoEmittedBorrowSide": "329428.90866744384756196",
      "morphoEmittedSupplySide": "197595.723731467899733423",
      "morphoRatePerSecondBorrowSide": "0.112142193854658172",
      "morphoRatePerSecondSupplySide": "0.067264339505537819",
      "totalMarketSizeBorrowSide": "9962008.475903",
      "totalMarketSizeSupplySide": "5975341.637677",
    },
    "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5": {
      "morphoEmittedBorrowSide": "33128.235882768449050302",
      "morphoEmittedSupplySide": "35088.48571447738874759",
      "morphoRatePerSecondBorrowSide": "0.011277313413251786",
      "morphoRatePerSecondSupplySide": "0.011944609788425037",
      "totalMarketSizeBorrowSide": "7117.607788304242518348",
      "totalMarketSizeSupplySide": "7538.767837953939402375",
    },
    "0x5d3a536e4d6dbd6114cc1ead35777bab948e3643": {
      "morphoEmittedBorrowSide": "40493.305966687060692972",
      "morphoEmittedSupplySide": "62512.682809592914267178",
      "morphoRatePerSecondBorrowSide": "0.013784485963605344",
      "morphoRatePerSecondSupplySide": "0.021280188864921335",
      "totalMarketSizeBorrowSide": "22670420.233898911238735512",
      "totalMarketSizeSupplySide": "34998100.436842312626954326",
    },
    "0x70e36f6bf80a52b3b46b3af8e106cc0ed743e8e4": {
      "morphoEmittedBorrowSide": "1664.212938928552136079",
      "morphoEmittedSupplySide": "1757.218128562705220812",
      "morphoRatePerSecondBorrowSide": "0.000566521289123281",
      "morphoRatePerSecondSupplySide": "0.000598181552479134",
      "totalMarketSizeBorrowSide": "8761.113344118061390243",
      "totalMarketSizeSupplySide": "9250.73158281569452292",
    },
    "0x8dae6cb04688c62d939ed9b68d32bc62e49970b1": {
      "morphoEmittedBorrowSide": "9947.116962459769198894",
      "morphoEmittedSupplySide": "4272.753433144735924831",
      "morphoRatePerSecondBorrowSide": "0.003386137310205531",
      "morphoRatePerSecondSupplySide": "0.001454504845160925",
      "totalMarketSizeBorrowSide": "2899868.265758561616520579",
      "totalMarketSizeSupplySide": "1245629.475852006528887765",
    },
    "0x9ff58f4ffb29fa2266ab25e75e2a8b3503311656": {
      "morphoEmittedBorrowSide": "126589.898025589854903714",
      "morphoEmittedSupplySide": "124537.808032882944424721",
      "morphoRatePerSecondBorrowSide": "0.043092966375813539",
      "morphoRatePerSecondSupplySide": "0.042394406329276601",
      "totalMarketSizeBorrowSide": "735.16232519",
      "totalMarketSizeSupplySide": "723.24495047",
    },
    "0xbcca60bb61934080951369a648fb03df4f96263c": {
      "morphoEmittedBorrowSide": "175930.102163985539320635",
      "morphoEmittedSupplySide": "277122.689767360699848917",
      "morphoRatePerSecondBorrowSide": "0.059889059832511417",
      "morphoRatePerSecondSupplySide": "0.094336427616884769",
      "totalMarketSizeBorrowSide": "29349452.240226",
      "totalMarketSizeSupplySide": "46230855.595303",
    },
    "0xccf4429db6322d5c611ee964527d42e5d685dd6a": {
      "morphoEmittedBorrowSide": "18922.559358332034592331",
      "morphoEmittedSupplySide": "28606.606294066022329924",
      "morphoRatePerSecondBorrowSide": "0.006441503049541133",
      "morphoRatePerSecondSupplySide": "0.009738087654570405",
      "totalMarketSizeBorrowSide": "362.63970028",
      "totalMarketSizeSupplySide": "548.22875363",
    },
    "0xf650c3d88d12db855b8bf7d11be6c55a4e07dcc9": {
      "morphoEmittedBorrowSide": "79868.759724564853385561",
      "morphoEmittedSupplySide": "104118.812503868386464625",
      "morphoRatePerSecondBorrowSide": "0.027188439448721695",
      "morphoRatePerSecondSupplySide": "0.035443495541894194",
      "totalMarketSizeBorrowSide": "9285183.993114",
      "totalMarketSizeSupplySide": "12104386.428147",
    },
  },
}
`;

exports[`Market Distributor e2e Age Epoch distribution  Should fetch data correctly for age3-epoch2 1`] = `
{
  "age3-epoch2": {
    "0x028171bca77440897b824ca71d1c56cac55b68a3": {
      "morphoEmittedBorrowSide": "3163.64340806894971734",
      "morphoEmittedSupplySide": "45164.340310989816891636",
      "morphoRatePerSecondBorrowSide": "0.001181169133836973",
      "morphoRatePerSecondSupplySide": "0.01686243291180922",
      "totalMarketSizeBorrowSide": "1127018.655735948185413224",
      "totalMarketSizeSupplySide": "16089377.827686982285759313",
    },
    "0x030ba81f1c18d280636f32af80b9aad02cf0854e": {
      "morphoEmittedBorrowSide": "583481.765253164373190666",
      "morphoEmittedSupplySide": "594216.576809080332476451",
      "morphoRatePerSecondBorrowSide": "0.217847134577794344",
      "morphoRatePerSecondSupplySide": "0.22185505406551685",
      "totalMarketSizeBorrowSide": "80873.877322593580534465",
      "totalMarketSizeSupplySide": "82361.783002863849993338",
    },
    "0x1982b2f5814301d4e9a8b0201555376e62f82428": {
      "morphoEmittedBorrowSide": "0.0",
      "morphoEmittedSupplySide": "339221.574235104011271742",
      "morphoRatePerSecondBorrowSide": "0.0",
      "morphoRatePerSecondSupplySide": "0.126650826700681007",
      "totalMarketSizeBorrowSide": "0.0",
      "totalMarketSizeSupplySide": "95326.04835272015155826",
    },
    "0x35a18000230da775cac24873d00ff85bccded550": {
      "morphoEmittedBorrowSide": "51.122363339171927677",
      "morphoEmittedSupplySide": "1714.821631988813324151",
      "morphoRatePerSecondBorrowSide": "0.000019086903875138",
      "morphoRatePerSecondSupplySide": "0.000640241051369777",
      "totalMarketSizeBorrowSide": "1151.406151866996570557",
      "totalMarketSizeSupplySide": "38622.161564146976341456",
    },
    "0x39aa39c021dfbae8fac545936693ac917d5e7563": {
      "morphoEmittedBorrowSide": "25156.525166757288675583",
      "morphoEmittedSupplySide": "62332.599782344831404614",
      "morphoRatePerSecondBorrowSide": "0.009392370507301855",
      "morphoRatePerSecondSupplySide": "0.023272326680982986",
      "totalMarketSizeBorrowSide": "14454393.327795",
      "totalMarketSizeSupplySide": "35814958.879481",
    },
    "0x3ed3b47dd13ec9a98b44e6204a523e766b225811": {
      "morphoEmittedBorrowSide": "142418.78703575329488479",
      "morphoEmittedSupplySide": "57189.863963285908838873",
      "morphoRatePerSecondBorrowSide": "0.053173083570696421",
      "morphoRatePerSecondSupplySide": "0.021352249090235181",
      "totalMarketSizeBorrowSide": "29510425.889626",
      "totalMarketSizeSupplySide": "11850243.056084",
    },
    "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5": {
      "morphoEmittedBorrowSide": "14065.171800082786002918",
      "morphoEmittedSupplySide": "31337.945713514352803642",
      "morphoRatePerSecondBorrowSide": "0.005251333557378579",
      "morphoRatePerSecondSupplySide": "0.011700248548952491",
      "totalMarketSizeBorrowSide": "2317.300783460616567836",
      "totalMarketSizeSupplySide": "5163.068548764235544088",
    },
    "0x5d3a536e4d6dbd6114cc1ead35777bab948e3643": {
      "morphoEmittedBorrowSide": "25722.81119904699537988",
      "morphoEmittedSupplySide": "35492.617275515499773866",
      "morphoRatePerSecondBorrowSide": "0.009603797490683615",
      "morphoRatePerSecondSupplySide": "0.013251425207405727",
      "totalMarketSizeBorrowSide": "22144822.921203816621703774",
      "totalMarketSizeSupplySide": "30555669.770863531871434972",
    },
    "0x70e36f6bf80a52b3b46b3af8e106cc0ed743e8e4": {
      "morphoEmittedBorrowSide": "1028.542465545771568658",
      "morphoEmittedSupplySide": "1135.919559730226609698",
      "morphoRatePerSecondBorrowSide": "0.000384013764017985",
      "morphoRatePerSecondSupplySide": "0.000424103778274427",
      "totalMarketSizeBorrowSide": "5592.622662403252876363",
      "totalMarketSizeSupplySide": "6176.477574062481629471",
    },
    "0x8dae6cb04688c62d939ed9b68d32bc62e49970b1": {
      "morphoEmittedBorrowSide": "7132.991423152230050876",
      "morphoEmittedSupplySide": "9744.016214246869370433",
      "morphoRatePerSecondBorrowSide": "0.002663153906493514",
      "morphoRatePerSecondSupplySide": "0.003637998885247487",
      "totalMarketSizeBorrowSide": "1137587.158428530689994353",
      "totalMarketSizeSupplySide": "1553999.866152658312320281",
    },
    "0x9ff58f4ffb29fa2266ab25e75e2a8b3503311656": {
      "morphoEmittedBorrowSide": "391403.652833109128238052",
      "morphoEmittedSupplySide": "607801.127372289448851283",
      "morphoRatePerSecondBorrowSide": "0.14613338292753477",
      "morphoRatePerSecondSupplySide": "0.226926944210084172",
      "totalMarketSizeBorrowSide": "614.27261048",
      "totalMarketSizeSupplySide": "953.88886246",
    },
    "0xbcca60bb61934080951369a648fb03df4f96263c": {
      "morphoEmittedBorrowSide": "93758.534988531332129572",
      "morphoEmittedSupplySide": "179881.828563488176592627",
      "morphoRatePerSecondBorrowSide": "0.035005426743029917",
      "morphoRatePerSecondSupplySide": "0.06716018091528083",
      "totalMarketSizeBorrowSide": "33223776.721973",
      "totalMarketSizeSupplySide": "63741969.829889",
    },
    "0xccf4429db6322d5c611ee964527d42e5d685dd6a": {
      "morphoEmittedBorrowSide": "8567.160242909050904391",
      "morphoEmittedSupplySide": "21066.135010429735707418",
      "morphoRatePerSecondBorrowSide": "0.003198611201802961",
      "morphoRatePerSecondSupplySide": "0.00786519377629545",
      "totalMarketSizeBorrowSide": "110.22182809",
      "totalMarketSizeSupplySide": "271.02888773",
    },
    "0xf650c3d88d12db855b8bf7d11be6c55a4e07dcc9": {
      "morphoEmittedBorrowSide": "23249.313065240059690776",
      "morphoEmittedSupplySide": "27833.61231329210723487",
      "morphoRatePerSecondBorrowSide": "0.008680299083497632",
      "morphoRatePerSecondSupplySide": "0.010391880343971067",
      "totalMarketSizeBorrowSide": "6184994.118289",
      "totalMarketSizeSupplySide": "7404551.178152",
    },
  },
}
`;

exports[`Market Distributor e2e Age Epoch distribution  Should fetch data correctly for age3-epoch3 1`] = `
{
  "age3-epoch3": {
    "0x028171bca77440897b824ca71d1c56cac55b68a3": {
      "morphoEmittedBorrowSide": "20457.884073123582858618",
      "morphoEmittedSupplySide": "46406.468253207396978804",
      "morphoRatePerSecondBorrowSide": "0.006964148990033899",
      "morphoRatePerSecondSupplySide": "0.015797408855258509",
      "totalMarketSizeBorrowSide": "3644866.169636850761438986",
      "totalMarketSizeSupplySide": "8267979.502858549661377693",
    },
    "0x030ba81f1c18d280636f32af80b9aad02cf0854e": {
      "morphoEmittedBorrowSide": "664282.173271447682880707",
      "morphoEmittedSupplySide": "405408.120331883478813419",
      "morphoRatePerSecondBorrowSide": "0.226130914103842484",
      "morphoRatePerSecondSupplySide": "0.138006576910363384",
      "totalMarketSizeBorrowSide": "130792.217852349981443822",
      "totalMarketSizeSupplySide": "79821.842775678349503155",
    },
    "0x1982b2f5814301d4e9a8b0201555376e62f82428": {
      "morphoEmittedBorrowSide": "0.0",
      "morphoEmittedSupplySide": "312854.226969270753966695",
      "morphoRatePerSecondBorrowSide": "0.0",
      "morphoRatePerSecondSupplySide": "0.106499941097927135",
      "totalMarketSizeBorrowSide": "0.0",
      "totalMarketSizeSupplySide": "161425.85100375655487609",
    },
    "0x35a18000230da775cac24873d00ff85bccded550": {
      "morphoEmittedBorrowSide": "306.140557978094891524",
      "morphoEmittedSupplySide": "32452.561762432146228045",
      "morphoRatePerSecondBorrowSide": "0.000104214514562259",
      "morphoRatePerSecondSupplySide": "0.011047304521525104",
      "totalMarketSizeBorrowSide": "295.176012566789143177",
      "totalMarketSizeSupplySide": "31290.260401555773501056",
    },
    "0x39aa39c021dfbae8fac545936693ac917d5e7563": {
      "morphoEmittedBorrowSide": "39122.086088488173027661",
      "morphoEmittedSupplySide": "93573.435454295808465892",
      "morphoRatePerSecondBorrowSide": "0.013317703597660734",
      "morphoRatePerSecondSupplySide": "0.031853702156282614",
      "totalMarketSizeBorrowSide": "3809099.805022",
      "totalMarketSizeSupplySide": "9110724.666829",
    },
    "0x3ed3b47dd13ec9a98b44e6204a523e766b225811": {
      "morphoEmittedBorrowSide": "204992.480218311953969656",
      "morphoEmittedSupplySide": "118009.188120117190379856",
      "morphoRatePerSecondBorrowSide": "0.069782298549261966",
      "morphoRatePerSecondSupplySide": "0.040171973080105252",
      "totalMarketSizeBorrowSide": "17270914.390828",
      "totalMarketSizeSupplySide": "9942445.611581",
    },
    "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5": {
      "morphoEmittedBorrowSide": "13196.906350864114103008",
      "morphoEmittedSupplySide": "45402.582934278583657704",
      "morphoRatePerSecondBorrowSide": "0.004492410930985877",
      "morphoRatePerSecondSupplySide": "0.015455672295165639",
      "totalMarketSizeBorrowSide": "1571.636723517876934724",
      "totalMarketSizeSupplySide": "5407.052591337511284798",
    },
    "0x5d3a536e4d6dbd6114cc1ead35777bab948e3643": {
      "morphoEmittedBorrowSide": "34837.508381048031124064",
      "morphoEmittedSupplySide": "74501.583711207759621716",
      "morphoRatePerSecondBorrowSide": "0.011859173604659596",
      "morphoRatePerSecondSupplySide": "0.025361377897333796",
      "totalMarketSizeBorrowSide": "3754329.376081090957990138",
      "totalMarketSizeSupplySide": "8028802.784406746426876527",
    },
    "0x70e36f6bf80a52b3b46b3af8e106cc0ed743e8e4": {
      "morphoEmittedBorrowSide": "1356.54750226952077046",
      "morphoEmittedSupplySide": "1439.401693780140650318",
      "morphoRatePerSecondBorrowSide": "0.000461787684596105",
      "morphoRatePerSecondSupplySide": "0.000489992406651736",
      "totalMarketSizeBorrowSide": "5281.471720070295248123",
      "totalMarketSizeSupplySide": "5604.049490933851651438",
    },
    "0x8dae6cb04688c62d939ed9b68d32bc62e49970b1": {
      "morphoEmittedBorrowSide": "6581.378478446946586354",
      "morphoEmittedSupplySide": "12458.846978775273761867",
      "morphoRatePerSecondBorrowSide": "0.002240393000560643",
      "morphoRatePerSecondSupplySide": "0.004241165229702911",
      "totalMarketSizeBorrowSide": "930200.188311879072156681",
      "totalMarketSizeSupplySide": "1760911.007284971422873351",
    },
    "0x9ff58f4ffb29fa2266ab25e75e2a8b3503311656": {
      "morphoEmittedBorrowSide": "208186.147319639373357153",
      "morphoEmittedSupplySide": "429752.958342486144025425",
      "morphoRatePerSecondBorrowSide": "0.070869467360988348",
      "morphoRatePerSecondSupplySide": "0.146293899217894248",
      "totalMarketSizeBorrowSide": "1374.0967743",
      "totalMarketSizeSupplySide": "2836.51031256",
    },
    "0xbcca60bb61934080951369a648fb03df4f96263c": {
      "morphoEmittedBorrowSide": "155368.558925336692277795",
      "morphoEmittedSupplySide": "311803.274506014426483319",
      "morphoRatePerSecondBorrowSide": "0.052889623817176161",
      "morphoRatePerSecondSupplySide": "0.106142182225631272",
      "totalMarketSizeBorrowSide": "46995763.541222",
      "totalMarketSizeSupplySide": "94314017.336707",
    },
    "0xccf4429db6322d5c611ee964527d42e5d685dd6a": {
      "morphoEmittedBorrowSide": "15751.932694245275946667",
      "morphoEmittedSupplySide": "30756.971105075552022195",
      "morphoRatePerSecondBorrowSide": "0.005362177523912471",
      "morphoRatePerSecondSupplySide": "0.010470101819538246",
      "totalMarketSizeBorrowSide": "82.13637102",
      "totalMarketSizeSupplySide": "160.37816052",
    },
    "0xf650c3d88d12db855b8bf7d11be6c55a4e07dcc9": {
      "morphoEmittedBorrowSide": "23297.73870996767134495",
      "morphoEmittedSupplySide": "30776.897266006210024048",
      "morphoRatePerSecondBorrowSide": "0.007930875105517317",
      "morphoRatePerSecondSupplySide": "0.01047688496255658",
      "totalMarketSizeBorrowSide": "3485799.557377",
      "totalMarketSizeSupplySide": "4604828.657529",
    },
  },
}
`;

exports[`Market Distributor e2e Age Epoch distribution  Should fetch data correctly for age4 1`] = `
{
  "age4": {
    "0x028171bCA77440897B824Ca71D1c56caC55b68A3": {
      "morphoEmittedBorrowSide": "34876.997711463876148833",
      "morphoEmittedSupplySide": "61923.002288536123851166",
      "morphoRatePerSecondBorrowSide": "0.00897042122208433",
      "morphoRatePerSecondSupplySide": "0.015926698119479455",
      "totalMarketSizeBorrowSide": "8534088.808584134080703876",
      "totalMarketSizeSupplySide": "15152003.770405534724326097",
    },
    "0x030bA81f1c18d280636F32af80b9AAd02Cf0854e": {
      "morphoEmittedBorrowSide": "470506.099560970257654703",
      "morphoEmittedSupplySide": "374893.900439029742345296",
      "morphoRatePerSecondBorrowSide": "0.121014943302718687",
      "morphoRatePerSecondSupplySide": "0.096423328302219583",
      "totalMarketSizeBorrowSide": "99822.243544187293722996",
      "totalMarketSizeSupplySide": "79537.226547699039004785",
    },
    "0x1982b2F5814301d4e9a8b0201555376e62F82428": {
      "morphoEmittedBorrowSide": "0.0",
      "morphoEmittedSupplySide": "161800.0",
      "morphoRatePerSecondBorrowSide": "0.0",
      "morphoRatePerSecondSupplySide": "0.041615226337448559",
      "totalMarketSizeBorrowSide": "0.0",
      "totalMarketSizeSupplySide": "124443.464690276161233569",
    },
    "0x35A18000230DA775CAc24873d00Ff85BccdeD550": {
      "morphoEmittedBorrowSide": "992.974823380391298811",
      "morphoEmittedSupplySide": "2007.025176619608701188",
      "morphoRatePerSecondBorrowSide": "0.000255394759099894",
      "morphoRatePerSecondSupplySide": "0.00051621017917171",
      "totalMarketSizeBorrowSide": "79836.564717173580233378",
      "totalMarketSizeSupplySide": "161367.63151426376328605",
    },
    "0x39AA39c021dfbaE8faC545936693aC917d5E7563": {
      "morphoEmittedBorrowSide": "18307.728346023841364679",
      "morphoEmittedSupplySide": "58092.27165397615863532",
      "morphoRatePerSecondBorrowSide": "0.004708777866775679",
      "morphoRatePerSecondSupplySide": "0.014941427894541193",
      "totalMarketSizeBorrowSide": "4733036.167309",
      "totalMarketSizeSupplySide": "15018401.932926",
    },
    "0x3Ed3B47Dd13EC9a98b44e6204A523E766B225811": {
      "morphoEmittedBorrowSide": "104752.585522796256655383",
      "morphoEmittedSupplySide": "64447.414477203743344616",
      "morphoRatePerSecondBorrowSide": "0.02694253742870274",
      "morphoRatePerSecondSupplySide": "0.016575981089815777",
      "totalMarketSizeBorrowSide": "21289712.225162",
      "totalMarketSizeSupplySide": "13098167.467922",
    },
    "0x4Ddc2D193948926D02f9B1fE9e1daa0718270ED5": {
      "morphoEmittedBorrowSide": "13766.88274845440635334",
      "morphoEmittedSupplySide": "41833.117251545593646659",
      "morphoRatePerSecondBorrowSide": "0.003540864904437861",
      "morphoRatePerSecondSupplySide": "0.010759546618195883",
      "totalMarketSizeBorrowSide": "1541.846709599949697403",
      "totalMarketSizeSupplySide": "4685.174949561173636027",
    },
    "0x5d3a536E4D6DbD6114cc1Ead35777bAB948E3643": {
      "morphoEmittedBorrowSide": "20887.319734487545130548",
      "morphoEmittedSupplySide": "46312.680265512454869451",
      "morphoRatePerSecondBorrowSide": "0.005372253018129512",
      "morphoRatePerSecondSupplySide": "0.011911697599154437",
      "totalMarketSizeBorrowSide": "5719927.286563578531551045",
      "totalMarketSizeSupplySide": "12682582.874776800512660654",
    },
    "0x70e36f6BF80a52b3B46b3aF8e106CC0ed743E8e4": {
      "morphoEmittedBorrowSide": "394.13239517621614235",
      "morphoEmittedSupplySide": "405.867604823783857649",
      "morphoRatePerSecondBorrowSide": "0.000101371500816928",
      "morphoRatePerSecondSupplySide": "0.000104389816055499",
      "totalMarketSizeBorrowSide": "5087.162207937298104009",
      "totalMarketSizeSupplySide": "5238.631398879180320976",
    },
    "0x8dAE6Cb04688C62d939ed9B68d32Bc62e49970b1": {
      "morphoEmittedBorrowSide": "8083.151413926229271981",
      "morphoEmittedSupplySide": "15316.848586073770728018",
      "morphoRatePerSecondBorrowSide": "0.002078999849260861",
      "morphoRatePerSecondSupplySide": "0.003939518669257657",
      "totalMarketSizeBorrowSide": "936180.803810536531029451",
      "totalMarketSizeSupplySide": "1773978.846474406810814532",
    },
    "0x9ff58f4ffb29fa2266ab25e75e2a8b3503311656": {
      "morphoEmittedBorrowSide": "52655.310173168694099078",
      "morphoEmittedSupplySide": "147544.689826831305900921",
      "morphoRatePerSecondBorrowSide": "0.01354303245194668",
      "morphoRatePerSecondSupplySide": "0.037948737095378422",
      "totalMarketSizeBorrowSide": "662.90422468",
      "totalMarketSizeSupplySide": "1857.5144253",
    },
    "0xBcca60bB61934080951369a648Fb03DF4F96263C": {
      "morphoEmittedBorrowSide": "47943.315101156150782775",
      "morphoEmittedSupplySide": "161856.684898843849217224",
      "morphoRatePerSecondBorrowSide": "0.012331099563054565",
      "morphoRatePerSecondSupplySide": "0.041629805786739673",
      "totalMarketSizeBorrowSide": "18137213.893283",
      "totalMarketSizeSupplySide": "61231254.198299",
    },
    "0xccF4429DB6322D5C611ee964527D42E5d685DD6a": {
      "morphoEmittedBorrowSide": "9632.719237840456526802",
      "morphoEmittedSupplySide": "29367.280762159543473197",
      "morphoRatePerSecondBorrowSide": "0.002477551244300528",
      "morphoRatePerSecondSupplySide": "0.007553312953230335",
      "totalMarketSizeBorrowSide": "72.98666892",
      "totalMarketSizeSupplySide": "222.51453044",
    },
    "0xf650C3d88D12dB855b8bf7D11Be6C55A4e07dCC9": {
      "morphoEmittedBorrowSide": "27567.430282367552457273",
      "morphoEmittedSupplySide": "23832.569717632447542726",
      "morphoRatePerSecondBorrowSide": "0.007090388447110996",
      "morphoRatePerSecondSupplySide": "0.006129776161942501",
      "totalMarketSizeBorrowSide": "4524807.328582",
      "totalMarketSizeSupplySide": "3911782.310238",
    },
  },
}
`;
